# dlms-cosem-c

./: CMakeLists.txt  Makefile  README.md
examples/: meter_simulation.c
include/dlms/: dlms_asn1.h  dlms_axdr.h  dlms_client.h  dlms_core.h  dlms_cosem.h  dlms_hdlc.h  dlms_security.h
src/: dlms_asn1.c  dlms_axdr.c  dlms_client.c  dlms_core.c  dlms_cosem.c  dlms_hdlc.c  dlms_security.c
tests/: test_asn1.c  test_axdr.c  test_core.c  test_cosem.c  test_hdlc.c  test_macros.h  test_main.c  test_security.c
